# pydar

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  add_new_features.py  environment.yml  example_pydar_script.py  pyproject.toml  requirements.txt  setup.py  testing_extract_flyby_parameters.py  testing_pydar_functionality.py
.github/: codecov.yml
.github/workflows/: pytests.yml  web_scrap_dynamic_csv_files.yml
pydar/: __init__.py  display_image.py  error_handling.py  extract_flyby_parameters.py  get_metadata.py  get_supplementary_backplanes.py  pydar_testing.py  read_readme.py  retrieve_ids_by_time_position.py  retrieve_supplementary_backplanes.py  sbdr_make_shapefile.py  sbdr_tester_shapefile.py  test_bearing_correction.py  titan_features.py  updateCsvCORADARJPLOptions.py  updateCsvCORADRJPLOptions.py  updateCsvFeatureNameDetails.py  updateCsvSwathCoverage.py  update_csv.py
pydar/data/: cassini_flyby.csv  coradr_jpl_options.csv  feature_name_details.csv  sar_coverage_by_feature_name.csv  sar_swath_details.csv  swath_coverage_by_time_position.csv
pydar/pytests/: test_display_image.py  test_error_display_image.py  test_error_extract_flyby_parameters.py  test_error_read_readme.py  test_error_retrieve_ids_by_time_position.py  test_extract_flyby_parameters.py  test_read_readme.py  test_retrieve_ids_by_time_position.py
pydar/testing_files/: SBDR.FMT
pydar/v2_shapefile/: retrieve_supplementary_backplanes.py  sbdr_make_shapefile.py  sbdr_tester_shapefile.py
