[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools" ]

[project]
name = "pydar"
version = "v2.0.1"
description = "A Python package to access, download, view, and manipulate Cassini RADAR images"
readme = "README.md"
keywords = [ "astronomy", "cassini", "geophysics", "jpl", "nasa", "planetary-science", "python", "radar" ]

license = "MIT"
authors = [
  { name = "Cora Schneck", email = "cyschneck@gmail.com" },
  { name = "Una Schneck", email = "ugschneck@gmail.com" },
]

requires-python = ">=3.10"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
  "beautifulsoup4",
  "matplotlib",
  "pandas",
  "pdr",
  "pyproj",
  "rasterio",
  "urllib3",
]

optional-dependencies.dev = [
  "pre-commit",
  "pytest",
]
urls.Issues = "https://github.com/unaschneck/pydar/issues"
urls.Repository = "https://github.com/unaschneck/pydar"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "pydar" ]
exclude = [ "pydar/pytests*" ]
